--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "rayun.dev personal development page"
 requires-python = ">=3.13"
 dependencies = [
+    "aiohttp>=3.13.1",
     "asgiref>=3.10.0",
     "django>=5.2.7",
     "pillow>=12.0.0",
@@ -11,5 +12,6 @@ dependencies = [
     "requests>=2.32.5",
     "sqlparse>=0.5.3",
     "tzdata>=2025.2",
+    "uvicorn>=0.38.0",
     "whitenoise>=6.11.0",
 ]
